--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
         </section>
     </main>
     <footer>
-        <p>Feito pelo seu aluno mais conrintiano </p>
+        <p>Feito pelo seu aluno mais corintiano </p>
 
     </footer>
 
